--- a/style.css
+++ b/style.css
@@ -14,6 +14,17 @@ body, button{
   color: #666;
 }
 
+.header{
+  padding: 1% 2% 0;
+  font-size: 32px;  
+  color: #666;
+  margin-bottom: 20px;
+}
+
+.plus{
+  color: green;
+}
+
 label{
   font-weight: 300;
   margin: 0 .4em 0 0;
@@ -75,6 +86,14 @@ button + label{
   background: #ffffff;
   margin-bottom: 1%;
   display: none;
+  content: attr(data-name);
+  color: black;
+  font-size: 16px;
+  /*display: inline-block;*/
+  vertical-align: middle;
+  padding: 1.5% 2%;
+  font-weight: 200;
+  width: 100%;
 }
 
 .container .mix.category-1{
@@ -85,21 +104,25 @@ button + label{
   border-top: 2px solid yellow;
 }
 
-.container .mix:after{
-  content: attr(data-name);
-  color: black;
-  font-size: 16px;
-  display: inline-block;
-  vertical-align: middle;
-  padding: 1.5% 2%;
-  font-weight: 200;
+.container .mix.category-3{
+  border-top: 2px solid red;
 }
 
-.container .mix:before{
-  content: '';
+.container .mix.category-4{
+  border-top: 2px solid blue;
+}
+
+.container .mix .value{
+  float:right;
   display: inline-block;
-  /*height: 60px;/* Custom */*/
-  /*padding-top: 60%;*/
+  font-weight: 400;
+}
+
+.container .mix .plus{
+  float:right;
+  margin-right: 20px;
+  display: inline-block;
+  font-weight: 400;
 }
 
 @media all and (min-width: 240px){
