Added padding to body

--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ html, body {
   background: white;
 }
 
+body {
+  padding: 0 15px;
+}
 body, button{
   font-family: 'Helvetica Neue', arial, sans-serif;
 }
