I ll Never Commit broken code again

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,16 @@
 <html>
 <head>
   <title>Papelex</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="tether.min.js"></script>
-  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/tether.min.js"></script>
+  <script src="/js/highcharts.js"></script>
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
   <!-- Latest compiled and minified JavaScript -->
-  <script src="bootstrap.min.js"></script>
-  <script src="main.js"></script>
-  <link rel="stylesheet" href="bootstrap.min.css">
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
-  <script type="text/javascript" src="chromecast.js"></script>
+  <script type="text/javascript" src="/js/chromecast.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <style type="text/css">
 .top h2 {
